--- a/sanaru/index.html
+++ b/sanaru/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>東京理科大学 聖地巡礼VR</title>
-    <meta property="og:url" content="https://miyaryo1212.github.io/webvr/tus/index" />
+    <title>学校祭 VR / 物理化学班</title>
+    <meta property="og:url" content="https://miyaryo1212.github.io/webvr/sanaru/index" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="東京理科大学 聖地巡礼VR" />
-    <meta property="og:description" content="危ない。" />
-    <meta property="og:site_name" content="東京理科大学 聖地巡礼VR" />
+    <meta property="og:title" content="学校祭 VR / 物理化学班" />
+    <meta property="og:description" content="学校祭 部展用 VR" />
+    <meta property="og:site_name" content="学校祭 VR / 物理化学班" />
     <meta property="og:image" content="#" />
     <!-- A-Frame 1.0.4 iOS Safariに対応 -->
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
@@ -18,7 +18,7 @@
 <body>
     <a-scene>
         <a-assets>
-            <img id="sky" src="./images/tus.jpg">
+            <img id="sky" src="./images/sanaru.jpg">
         </a-assets>
         <a-sky src="#sky"></a-sky>
     </a-scene>
